--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ Werkzeug==2.1.2
 Flask==2.1.2
 Flask-Cors==3.0.10
 redis==4.3.4
-msgpack-python==0.5.6
+msgpack==1.0.4
 python-dateutil==2.8.2
 gunicorn
 bugsnag
