--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-gevent==21.12.0
-greenlet==1.1.2
-proxytypes3==1.0.1
-nose==1.3.7
-feedparser==6.0.10
-Jinja2==3.1.2
-Werkzeug==2.1.2
-Flask==2.1.2
-Flask-Cors==3.0.10
-redis==4.3.4
-msgpack==1.0.4
-python-dateutil==2.8.2
+gevent
+greenlet
+proxytypes3
+nose
+feedparser
+Jinja2
+Werkzeug
+Flask
+Flask-Cors
+redis
+msgpack
+python-dateutil
 gunicorn
 bugsnag
 blinker
