--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,16 +2,17 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: 
+      - master
+    tags:        
+      - v**
   pull_request:
-    branches: [ "master" ]
+    branches: 
+      - master
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
 
